# napoleon-efire

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/napoleon_efire/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  fan.py  light.py  manifest.json  models.py  number.py  strings.json  switch.py
custom_components/napoleon_efire/translations/: en.json  pt.json
docs/: napoleon_efire.md
scripts/: develop
