[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "napoleon-efire"
dynamic = ["version"]
description = 'Home Assistant component for Napoleon fireplaces'
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [
  { name = "Felix Kaechele", email = "felix@kaechele.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "bluetooth_data_tools>=1.28.0",
  "homeassistant>=2025.8",
  "bonaparte>=1.0.1",
]

[project.urls]
Documentation = "https://github.com/kaechele/napoleon-efire#readme"
Issues = "https://github.com/kaechele/napoleon-efire/issues"
Source = "https://github.com/kaechele/napoleon-efire"

[tool.hatch.version]
path = "custom_components/napoleon_efire/manifest.json"
pattern = '"version": "(?P<version>[^\"]+)"'

[tool.hatch.envs.default]
path = ".envs/default"
python = "3.13"

[tool.hatch.envs.lint]
detached = true
path = ".envs/lint"
dependencies = [
  "ruff>=0.12.3",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff format --diff {args:.}",
]
fmt = [
  "ruff check --fix {args:.}",
  "ruff format {args:.}",
  "style",
]
all = [
  "style",
]

[tool.hatch.envs.release]
detached = true
dependencies = [
  "python-semantic-release>=10.3.1"
]

[tool.hatch.envs.release.scripts]
dryrun = "semantic-release --noop version"
local = "semantic-release version --no-push"
push = "semantic-release version"

[tool.semantic_release]
logging_use_named_masks = true
build_command = """
  pushd custom_components/napoleon_efire/
  mkdir -p ../../dist
  zip -h > /dev/null 2>&1 || apt-get install -y zip
  zip ../../dist/napoleon_efire.zip -r ./
  popd
"""
version_variables = [
    "custom_components/napoleon_efire/manifest.json:version"
]
